fdo#67461 add multiple selection support to hide/show multiple styles

With commit 439ac45925039aa7a537feedab3e731e8a60a8e5 I only add support
to delete multiple styles.
Hereby I add the possibility to hide and show multiple styles too.

Change-Id: I46a8400c281c87b2881367f89ee92db2ba77bfb2
Reviewed-on: https://gerrit.libreoffice.org/5935
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>